--- a/src/Page/Notebook/Notebook.css
+++ b/src/Page/Notebook/Notebook.css
@@ -243,6 +243,45 @@
       margin: -2px 1px;
 }
 
+
+/* modal */
+.notebook_modal{
+      width: 600px;
+      height: 320px;
+      background-color: #FFFFFF;
+      border-radius: 20px;
+      border: 1px solid black;
+      position: absolute;
+      top: 250px;
+      left: 30%;
+}
+.notebook_modal p{
+      font-family:"Quicksand" ;
+      font-weight:700;
+      Size:28px;
+      line-height:35px;
+      letter-spacing: 1.29%;
+      align-items:center;
+}
+.notebook_modal img{
+      position: relative;
+      top: -100px;
+}
+.notebook_modal_button_update{
+      width: 266px;
+      height: 52px  ;
+      background: linear-gradient(83.47deg, #58CC02 9.02%, #23AC38 90.81%);
+      box-shadow: 0px 4px 0px #209B32;
+      border-radius: 100px;
+}
+.notebook_modal_button_no{
+      width: 266px;
+      height: 52px;
+      border: 1px solid #F8F8F8;
+      box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.1);
+      border-radius: 100px;
+}
+
 @media screen and (max-width: 1026px) {
     
   }
