--- a/src/Page/Notebook/Notebook.css
+++ b/src/Page/Notebook/Notebook.css
@@ -251,29 +251,55 @@
       height: 320px;
       background-color: #FFFFFF;
       border-radius: 20px;
-      border: 1px solid black;
       position: absolute;
-      top: 250px;
+      top: 330px;
       left: 30%;
+      border: 1px solid black;
 }
 .notebook_modal p{
       font-family:"Quicksand" ;
       font-weight:700;
-      Size:28px;
+      font-size: 23px;
       line-height:35px;
       letter-spacing: 1.29%;
       align-items:center;
-}
-.notebook_modal img{
       position: relative;
-      top: -100px;
+      top: -150px;
 }
+.notebook_modal_img1{
+      width: 250px;
+      position: relative;
+      top: -155px;
+}
+.notebook_modal_bodyclose{
+      position: relative;
+      top: -240px;
+      right: -550px;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: #FFFFFF;
+      box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.1);
+      background-image: url('./../../imager/closebutton.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      cursor: pointer;
+}
+
 .notebook_modal_button_update{
       width: 266px;
       height: 52px  ;
       background: linear-gradient(83.47deg, #58CC02 9.02%, #23AC38 90.81%);
       box-shadow: 0px 4px 0px #209B32;
       border-radius: 100px;
+      position: relative;
+      top: -160px;
+      left: 150px;
+      border: none;
+      font-size: 25px;
+      font-family: 'Quicksand';
+      font-weight: 700;
+      color: #FFFFFF;
 }
 .notebook_modal_button_no{
       width: 266px;
@@ -281,8 +307,32 @@
       border: 1px solid #F8F8F8;
       box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.1);
       border-radius: 100px;
+      position: relative;
+      top: -90px;
+      left: -115px;
+      font-size: 25px;
+      font-family: 'Quicksand';
+      font-weight: 700;
 }
-
+.background_shadow{
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.5);
+      position:fixed;
+      top: 0;
+      bottom: 0;
+      display: none;
+}
 @media screen and (max-width: 1026px) {
     
   }
+  .loader {
+      margin : auto;
+      border: 16px solid #f3f3f3;
+      border-radius: 50%;
+      border-top: 16px solid #3498db;
+      width: 50px;
+      height: 50px;
+      -webkit-animation: spin 2s linear infinite; /* Safari */
+      animation: spin 2s linear infinite;
+    }
